--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                   <p> <span> address : </span> delhi, india - 110059 </p>
               </div>
           </div>
-          <a href="suhail_saifi_resume_2024_01_07pdf.pdf" class="btn">download CV</a>
+          <a href="suhail_saifi_resume_2024_01_07pdf.pdf" target="_blank" class="btn">download CV</a>
       </div>
 
   </div>
